// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`open requests up to connectionCapicity 1`] = `
Object {
  "batch": Array [
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 1,
        },
        "executionKey": "foo",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 2,
        },
        "executionKey": "foo",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 3,
        },
        "executionKey": "bar",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 4,
        },
        "executionKey": "bar",
        "method": "POST",
        "path": "v2/bot/message/reply",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 5,
        },
        "executionKey": "baz",
        "method": "POST",
        "path": "v2/bot/message/reply",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 6,
        },
        "executionKey": "baz",
        "method": "POST",
        "path": "v2/bot/message/reply",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 7,
        },
        "executionKey": "foo",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 8,
        },
        "executionKey": "bar",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 9,
        },
        "executionKey": "baz",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`sequently excute jobs within the same identical channel 1`] = `
Object {
  "batch": Array [
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 1,
        },
        "executionKey": "foo",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 2,
        },
        "executionKey": "foo",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 3,
        },
        "executionKey": "bar",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 4,
        },
        "executionKey": "bar",
        "method": "POST",
        "path": "v2/bot/message/reply",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 5,
        },
        "executionKey": "baz",
        "method": "POST",
        "path": "v2/bot/message/reply",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 6,
        },
        "executionKey": "baz",
        "method": "POST",
        "path": "v2/bot/message/reply",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 7,
        },
        "executionKey": "foo",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 8,
        },
        "executionKey": "bar",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 9,
        },
        "executionKey": "baz",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
  ],
  "errors": null,
  "success": true,
}
`;

exports[`throw if api error happen 1`] = `
Object {
  "batch": Array [
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 1,
        },
        "executionKey": "foo",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    undefined,
    undefined,
  ],
  "errors": Array [
    [LineAPIError (Bad Request): The request body has 2 error(s): 1) May not be empty, at messages[0].text. 2) Must be one of the following values: [text, image, video, audio, location, sticker, template, imagemap], at messages[1].type.],
  ],
  "success": false,
}
`;

exports[`throw if connection error happen 1`] = `
Object {
  "batch": Array [
    Object {
      "error": undefined,
      "job": Object {
        "body": Object {
          "id": 1,
        },
        "executionKey": "foo",
        "method": "POST",
        "path": "v2/bot/message/push",
      },
      "result": Object {},
      "success": true,
    },
    undefined,
    undefined,
  ],
  "errors": Array [
    [FetchError: request to https://api.line.me/v2/bot/message/push failed, reason: something wrong like connection error],
  ],
  "success": false,
}
`;
